fixed navbar collapse background size and transition, adjusted home title and textbox sizing to move up off roof

--- a/src/App.css
+++ b/src/App.css
@@ -52,24 +52,41 @@ body,
   border-color: transparent !important; /* Reset the border color */
 }
 
+.navbar-nav {
+  display: flex;
+  align-items: center;
+  height: 100%;;
+}
+
 .navbar .navbar-nav .nav-link {
+  display: flex;
+  align-items: center;
   color: #4396e8; /* Change the color of the nav links */
   font-weight: 700;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
-}
-
-.navbar-collapse.show .nav-link {
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
+}
+
+
+.navbar-collapse ul a {
+  max-height: 6vh;
+  transition: height 0.5s ease;
+}
+
+/* Responsive adjustment for screens narrower than 992px */
+@media (max-width: 991.98px) {
+  .navbar-collapse {
+    max-height: 24vh;
+  }
 }
 
 .navbar .navbar-collapse ul {
   background: linear-gradient(
     to bottom,
     rgb(255, 255, 255) 0%,
-    rgba(185, 208, 229, 0.956) 100%
+    rgb(185, 208, 229) 100%
   );
-  max-height: 6vh;
 }
 
 .navbar .navbar-brand {
